examples/test/testpolicy8045.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8045
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key33: value20
      key41: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value5
          key26: value48
      podSelector:
        matchLabels:
          key23: value43
          key34: value43
          key22: value32
